[gd_scene load_steps=9 format=3 uid="uid://dmdi4mdm7qr5o"]

[ext_resource type="Script" path="res://scripts/classes/Playstate.gd" id="1_kcow4"]
[ext_resource type="PackedScene" uid="uid://dw40p48fqbsl2" path="res://scenes/player_sorakai.tscn" id="2_ntxhb"]
[ext_resource type="PackedScene" uid="uid://b0lkmrk437kiy" path="res://scenes/levels/quest/1-1.tscn" id="2_qgx60"]
[ext_resource type="PackedScene" uid="uid://bexrd87t846hr" path="res://scenes/pause_menu.tscn" id="5_rp537"]
[ext_resource type="PackedScene" uid="uid://douw2p6ggl56h" path="res://scenes/dialog_box.tscn" id="6_ne7gu"]
[ext_resource type="Script" path="res://addons/smoother/smoother.gd" id="6_qgbhh"]
[ext_resource type="PackedScene" uid="uid://dem3mo2wlnxg1" path="res://scenes/general_ui.tscn" id="7_mhkk0"]
[ext_resource type="AudioStream" uid="uid://de3deq6mnk6pu" path="res://assets/sounds/battle won.mp3" id="9_da1go"]

[node name="MainGameState" type="Node3D" node_paths=PackedStringArray("Sorakai", "MusicStream", "smoother", "Dialog")]
script = ExtResource("1_kcow4")
Sorakai = NodePath("Sorakai")
MusicStream = NodePath("Music")
smoother = NodePath("Smoother")
Dialog = NodePath("DialogBox")
first_level = ExtResource("2_qgx60")

[node name="Sorakai" parent="." instance=ExtResource("2_ntxhb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Smoother" type="Node" parent="."]
script = ExtResource("6_qgbhh")

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -15.32
bus = &"Music"
playback_type = 1

[node name="PauseMenu" parent="." instance=ExtResource("5_rp537")]
layer = 128
visible = false

[node name="DialogBox" parent="." instance=ExtResource("6_ne7gu")]
visible = false

[node name="GeneralUI" parent="." instance=ExtResource("7_mhkk0")]

[node name="AlbumCollectedSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_da1go")
volume_db = -17.737
bus = &"Music"

[connection signal="game_paused" from="." to="." method="_on_game_paused"]
[connection signal="receiveMoney" from="." to="." method="_on_receive_money"]
